--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.1"
+    "mongoose": "^5.12.1",
+    "morgan": "^1.10.0"
   }
 }
