--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern",
+  "name": "mern-heroku",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Simple MERN application designed to deploy on Heroku",
   "main": "server.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
@@ -12,8 +12,8 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jake O'Toole",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
